libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_buy_bitcoin_request {
  int32_t provider;
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_buy_bitcoin_request;
typedef struct wire_cst_check_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
  struct wire_cst_list_prim_u_8_strict *pubkey;
  struct wire_cst_list_prim_u_8_strict *signature;
} wire_cst_check_message_request;
typedef struct wire_cst_configure_node_request {
  struct wire_cst_list_prim_u_8_strict *close_to_address;
} wire_cst_configure_node_request;
typedef struct wire_cst_greenlight_credentials {
  struct wire_cst_list_prim_u_8_strict *device_key;
  struct wire_cst_list_prim_u_8_strict *device_cert;
} wire_cst_greenlight_credentials;
typedef struct wire_cst_greenlight_node_config {
  struct wire_cst_greenlight_credentials *partner_credentials;
  struct wire_cst_list_prim_u_8_strict *invite_code;
} wire_cst_greenlight_node_config;
typedef struct wire_cst_config {
  struct wire_cst_list_prim_u_8_strict *breezserver;
  struct wire_cst_list_prim_u_8_strict *chainnotifier_url;
  struct wire_cst_list_prim_u_8_strict *mempoolspace_url;
  struct wire_cst_list_prim_u_8_strict *working_dir;
  int32_t network;
  uint32_t payment_timeout_sec;
  struct wire_cst_list_prim_u_8_strict *default_lsp_id;
  struct wire_cst_list_prim_u_8_strict *api_key;
  double maxfee_percent;
  uint64_t exemptfee_msat;
  struct wire_cst_node_config node_config;
} wire_cst_config;
typedef struct wire_cst_connect_request {
  struct wire_cst_config config;
  struct wire_cst_list_prim_u_8_strict *seed;
  bool *restore_only;
} wire_cst_connect_request;
typedef struct wire_cst_list_payment_type_filter {
  int32_t *ptr;
  int32_t len;
} wire_cst_list_payment_type_filter;
typedef struct wire_cst_list_metadata_filter {
  struct wire_cst_metadata_filter *ptr;
  int32_t len;
} wire_cst_list_metadata_filter;
typedef struct wire_cst_list_payments_request {
  struct wire_cst_list_payment_type_filter *filters;
  struct wire_cst_list_metadata_filter *metadata_filters;
  int64_t *from_timestamp;
  int64_t *to_timestamp;
  bool *include_failures;
  uint32_t *offset;
  uint32_t *limit;
} wire_cst_list_payments_request;
typedef struct wire_cst_ln_url_auth_request_data {
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *action;
  struct wire_cst_list_prim_u_8_strict *domain;
  struct wire_cst_list_prim_u_8_strict *url;
} wire_cst_ln_url_auth_request_data;
typedef union AesSuccessActionDataResultKind {
  struct wire_cst_AesSuccessActionDataResult_Decrypted Decrypted;
  struct wire_cst_AesSuccessActionDataResult_ErrorStatus ErrorStatus;
} AesSuccessActionDataResultKind;
typedef struct wire_cst_aes_success_action_data_result {
  int32_t tag;
  union AesSuccessActionDataResultKind kind;
} wire_cst_aes_success_action_data_result;
typedef struct wire_cst_backup_failed_data {
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_backup_failed_data;
typedef struct wire_cst_bitcoin_address_data {
  struct wire_cst_list_prim_u_8_strict *address;
  int32_t network;
  uint64_t *amount_sat;
  struct wire_cst_list_prim_u_8_strict *label;
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_bitcoin_address_data;
typedef struct wire_cst_closed_channel_payment_details {
  int32_t state;
  struct wire_cst_list_prim_u_8_strict *funding_txid;
  struct wire_cst_list_prim_u_8_strict *short_channel_id;
  struct wire_cst_list_prim_u_8_strict *closing_txid;
} wire_cst_closed_channel_payment_details;
typedef struct wire_cst_success_action_processed {
  int32_t tag;
  union SuccessActionProcessedKind kind;
} wire_cst_success_action_processed;
typedef struct wire_cst_swap_info {
  struct wire_cst_list_prim_u_8_strict *bitcoin_address;
  int64_t created_at;
  int64_t lock_height;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_list_prim_u_8_strict *private_key;
  struct wire_cst_list_prim_u_8_strict *public_key;
  struct wire_cst_list_prim_u_8_strict *swapper_public_key;
  struct wire_cst_list_prim_u_8_strict *script;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t paid_msat;
  uint64_t total_incoming_txs;
  uint64_t confirmed_sats;
  uint64_t unconfirmed_sats;
  int32_t status;
  struct wire_cst_list_String *refund_tx_ids;
  struct wire_cst_list_String *unconfirmed_tx_ids;
  struct wire_cst_list_String *confirmed_tx_ids;
  int64_t min_allowed_deposit;
  int64_t max_allowed_deposit;
  int64_t max_swapper_payable;
  struct wire_cst_list_prim_u_8_strict *last_redeem_error;
  struct wire_cst_opening_fee_params *channel_opening_fees;
  uint32_t *confirmed_at;
} wire_cst_swap_info;
typedef struct wire_cst_reverse_swap_info {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *claim_pubkey;
  struct wire_cst_list_prim_u_8_strict *lockup_txid;
  struct wire_cst_list_prim_u_8_strict *claim_txid;
  uint64_t onchain_amount_sat;
  int32_t status;
} wire_cst_reverse_swap_info;
typedef struct wire_cst_ln_payment_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *label;
  struct wire_cst_list_prim_u_8_strict *destination_pubkey;
  struct wire_cst_list_prim_u_8_strict *payment_preimage;
  bool keysend;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  struct wire_cst_list_prim_u_8_strict *open_channel_bolt11;
  struct wire_cst_success_action_processed *lnurl_success_action;
  struct wire_cst_list_prim_u_8_strict *lnurl_pay_domain;
  struct wire_cst_list_prim_u_8_strict *ln_address;
  struct wire_cst_list_prim_u_8_strict *lnurl_metadata;
  struct wire_cst_list_prim_u_8_strict *lnurl_withdraw_endpoint;
  struct wire_cst_swap_info *swap_info;
  struct wire_cst_reverse_swap_info *reverse_swap_info;
  uint32_t *pending_expiration_block;
} wire_cst_ln_payment_details;
typedef struct wire_cst_payment {
  struct wire_cst_list_prim_u_8_strict *id;
  int32_t payment_type;
  int64_t payment_time;
  uint64_t amount_msat;
  uint64_t fee_msat;
  int32_t status;
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_payment_details details;
  struct wire_cst_list_prim_u_8_strict *metadata;
} wire_cst_payment;
typedef struct wire_cst_invoice_paid_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  struct wire_cst_payment *payment;
} wire_cst_invoice_paid_details;
typedef struct wire_cst_list_route_hint {
  struct wire_cst_route_hint *ptr;
  int32_t len;
} wire_cst_list_route_hint;
typedef struct wire_cst_ln_invoice {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  int32_t network;
  struct wire_cst_list_prim_u_8_strict *payee_pubkey;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *description_hash;
  uint64_t *amount_msat;
  uint64_t timestamp;
  uint64_t expiry;
  struct wire_cst_list_route_hint *routing_hints;
  struct wire_cst_list_prim_u_8_strict *payment_secret;
  uint64_t min_final_cltv_expiry_delta;
} wire_cst_ln_invoice;
typedef struct wire_cst_ln_url_error_data {
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_ln_url_error_data;
typedef struct wire_cst_ln_url_pay_error_data {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_ln_url_pay_error_data;
struct wire_cst_aes_success_action_data_result *frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_result(void);
struct wire_cst_backup_failed_data *frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_data(void);
struct wire_cst_bitcoin_address_data *frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_data(void);
bool *frbgen_breez_sdk_cst_new_box_autoadd_bool(bool value);
struct wire_cst_buy_bitcoin_request *frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_request(void);
struct wire_cst_check_message_request *frbgen_breez_sdk_cst_new_box_autoadd_check_message_request(void);
struct wire_cst_closed_channel_payment_details *frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_details(void);
struct wire_cst_configure_node_request *frbgen_breez_sdk_cst_new_box_autoadd_configure_node_request(void);
struct wire_cst_connect_request *frbgen_breez_sdk_cst_new_box_autoadd_connect_request(void);
struct wire_cst_greenlight_credentials *frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentials(void);
struct wire_cst_greenlight_node_config *frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_config(void);
int64_t *frbgen_breez_sdk_cst_new_box_autoadd_i_64(int64_t value);
struct wire_cst_invoice_paid_details *frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_details(void);
struct wire_cst_list_payments_request *frbgen_breez_sdk_cst_new_box_autoadd_list_payments_request(void);
struct wire_cst_ln_invoice *frbgen_breez_sdk_cst_new_box_autoadd_ln_invoice(void);
struct wire_cst_ln_payment_details *frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_details(void);
struct wire_cst_ln_url_auth_request_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_data(void);
struct wire_cst_ln_url_error_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_data(void);
struct wire_cst_ln_url_pay_error_data *frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data(void);