libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  ffi.Pointer<wire_cst_aes_success_action_data_result>
      frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_result() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_result();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_aes_success_action_data_result> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_result');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_result =
      _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_resultPtr
          .asFunction<ffi.Pointer<wire_cst_aes_success_action_data_result> Function()>();

  ffi.Pointer<wire_cst_backup_failed_data> frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_backup_failed_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_backup_failed_dataPtr
          .asFunction<ffi.Pointer<wire_cst_backup_failed_data> Function()>();

  ffi.Pointer<wire_cst_bitcoin_address_data> frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_bitcoin_address_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_bitcoin_address_dataPtr
          .asFunction<ffi.Pointer<wire_cst_bitcoin_address_data> Function()>();

  ffi.Pointer<ffi.Bool> frbgen_breez_sdk_cst_new_box_autoadd_bool(
    bool value,
  ) {
    return _frbgen_breez_sdk_cst_new_box_autoadd_bool(
      value,
    );
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_boolPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Bool> Function(ffi.Bool)>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_bool');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_bool =
      _frbgen_breez_sdk_cst_new_box_autoadd_boolPtr.asFunction<ffi.Pointer<ffi.Bool> Function(bool)>();

  ffi.Pointer<wire_cst_buy_bitcoin_request> frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_buy_bitcoin_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_buy_bitcoin_requestPtr
          .asFunction<ffi.Pointer<wire_cst_buy_bitcoin_request> Function()>();

  ffi.Pointer<wire_cst_check_message_request> frbgen_breez_sdk_cst_new_box_autoadd_check_message_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_check_message_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_check_message_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_check_message_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_check_message_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_check_message_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_check_message_requestPtr
          .asFunction<ffi.Pointer<wire_cst_check_message_request> Function()>();

  ffi.Pointer<wire_cst_closed_channel_payment_details>
      frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_details() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_details();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_detailsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_closed_channel_payment_details> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_details');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_details =
      _frbgen_breez_sdk_cst_new_box_autoadd_closed_channel_payment_detailsPtr
          .asFunction<ffi.Pointer<wire_cst_closed_channel_payment_details> Function()>();

  ffi.Pointer<wire_cst_configure_node_request> frbgen_breez_sdk_cst_new_box_autoadd_configure_node_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_configure_node_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_configure_node_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_configure_node_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_configure_node_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_configure_node_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_configure_node_requestPtr
          .asFunction<ffi.Pointer<wire_cst_configure_node_request> Function()>();

  ffi.Pointer<wire_cst_connect_request> frbgen_breez_sdk_cst_new_box_autoadd_connect_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_connect_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_connect_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_connect_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_connect_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_connect_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_connect_requestPtr
          .asFunction<ffi.Pointer<wire_cst_connect_request> Function()>();

  ffi.Pointer<wire_cst_greenlight_credentials> frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentials() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentials();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentialsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_greenlight_credentials> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentials');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentials =
      _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_credentialsPtr
          .asFunction<ffi.Pointer<wire_cst_greenlight_credentials> Function()>();

  ffi.Pointer<wire_cst_greenlight_node_config> frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_config() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_config();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_greenlight_node_config> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_config');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_config =
      _frbgen_breez_sdk_cst_new_box_autoadd_greenlight_node_configPtr
          .asFunction<ffi.Pointer<wire_cst_greenlight_node_config> Function()>();

  ffi.Pointer<ffi.Int64> frbgen_breez_sdk_cst_new_box_autoadd_i_64(
    int value,
  ) {
    return _frbgen_breez_sdk_cst_new_box_autoadd_i_64(
      value,
    );
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_i_64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int64> Function(ffi.Int64)>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_i_64');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_i_64 =
      _frbgen_breez_sdk_cst_new_box_autoadd_i_64Ptr.asFunction<ffi.Pointer<ffi.Int64> Function(int)>();

  ffi.Pointer<wire_cst_invoice_paid_details> frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_details() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_details();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_detailsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_invoice_paid_details> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_details');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_details =
      _frbgen_breez_sdk_cst_new_box_autoadd_invoice_paid_detailsPtr
          .asFunction<ffi.Pointer<wire_cst_invoice_paid_details> Function()>();

  ffi.Pointer<wire_cst_list_payments_request> frbgen_breez_sdk_cst_new_box_autoadd_list_payments_request() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_list_payments_request();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_list_payments_requestPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_payments_request> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_list_payments_request');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_list_payments_request =
      _frbgen_breez_sdk_cst_new_box_autoadd_list_payments_requestPtr
          .asFunction<ffi.Pointer<wire_cst_list_payments_request> Function()>();

  ffi.Pointer<wire_cst_ln_invoice> frbgen_breez_sdk_cst_new_box_autoadd_ln_invoice() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_invoice();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_invoicePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_invoice> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_invoice');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_invoice =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_invoicePtr
          .asFunction<ffi.Pointer<wire_cst_ln_invoice> Function()>();

  ffi.Pointer<wire_cst_ln_payment_details> frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_details() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_details();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_detailsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_payment_details> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_details');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_details =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_payment_detailsPtr
          .asFunction<ffi.Pointer<wire_cst_ln_payment_details> Function()>();

  ffi.Pointer<wire_cst_ln_url_auth_request_data>
      frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_auth_request_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_auth_request_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_auth_request_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_error_data> frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_data();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_ln_url_error_data> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_data');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_data =
      _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_error_dataPtr
          .asFunction<ffi.Pointer<wire_cst_ln_url_error_data> Function()>();

  ffi.Pointer<wire_cst_ln_url_pay_error_data> frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_ln_url_pay_error_data();
  }
